// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TeachingBubble renders TeachingBubble correctly 1`] = `
<div
  class=
      ms-Callout-container
      {
        position: relative;
      }
>
  <div
    class=
        ms-Callout
        ms-TeachingBubble
        specialClassName
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          animation-duration: 300ms;
          animation-fill-mode: both;
          animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
          animation-timing-function: linear;
          border-radius: 2px;
          border: 0px;
          box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
          box-sizing: border-box;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          max-width: 456px;
          outline: transparent;
          position: absolute;
          width: calc(100% + 1px);
          z-index: 1000000;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
          border-color: WindowText;
          border-style: solid;
          border-width: 1px;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
    style="opacity: 0; filter: opacity(0); pointer-events: none;"
    tabindex="-1"
  >
    <div
      class=
          ms-Callout-main
          {
            background-color: #ffffff;
            background: #0078d4;
            border-radius: 2px;
            overflow-x: hidden;
            overflow-y: hidden;
            position: relative;
            width: 100%;
          }
      style="overflow-y: hidden; outline: none; max-height: 100%;"
    >
      <div>
        <div
          aria-describedby="content"
          aria-labelledby="title"
          class=
              ms-TeachingBubble-content
              {
                animation-duration: 300ms;
                animation-fill-mode: both;
                animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
                animation-timing-function: linear;
                border: 0px;
                display: flex;
                max-width: 456px;
                outline: transparent;
                width: calc(100% + 1px);
              }
          data-is-focusable="true"
          role="dialog"
          tabindex="-1"
        >
          <div
            data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
          >
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
            <div
              class=
                  ms-TeachingBubble-bodycontent
                  {
                    padding-bottom: 20px;
                    padding-left: 24px;
                    padding-right: 24px;
                    padding-top: 20px;
                  }
            >
              <div
                class=
                    ms-TeachingBubble-body
                    &:not(:last-child) {
                      margin-bottom: 20px;
                    }
              >
                <p
                  class=
                      ms-TeachingBubble-subText
                      {
                        color: #ffffff;
                        font-size: 14px;
                        font-weight: 400;
                        margin-bottom: 0px;
                        margin-left: 0px;
                        margin-right: 0px;
                        margin-top: 0px;
                      }
                  id="content"
                >
                  Test Content
                </p>
              </div>
            </div>
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent correctly 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--large
            &:not(:last-child) {
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-size: 20px;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="title"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with buttons correctly 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--large
            {
              margin-right: 24px;
            }
            &:not(:last-child) {
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-size: 20px;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="title"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
      <div
        class=
            ms-Stack
            ms-TeachingBubble-footer
            {
              align-items: center;
              box-sizing: border-box;
              color: #ffffff;
              display: flex;
              flex-direction: row;
              flex-wrap: nowrap;
              flex: auto;
              height: auto;
              justify-content: flex-end;
              width: auto;
            }
            & > * {
              text-overflow: ellipsis;
            }
            & .ms-Button:not(:first-child) {
              margin-left: 10px;
            }
      >
        <div
          class=
              ms-StackItem
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                align-self: center;
                flex-basis: auto;
                flex-shrink: 1;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: auto;
                width: auto;
              }
        >
          <span />
        </div>
        <div
          class=
              ms-StackItem
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                flex-basis: auto;
                flex-shrink: 1;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: auto;
                width: auto;
              }
        >
          <button
            class=
                ms-Button
                ms-Button--primary
                ms-TeachingBubble-primaryButton
                primary-className
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  background-color: #ffffff;
                  border-color: #ffffff;
                  border-radius: 2px;
                  border: 1px solid #0078d4;
                  box-sizing: border-box;
                  color: #0078d4;
                  cursor: pointer;
                  display: inline-flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  justify-content: center;
                  min-height: 32px;
                  min-width: 80px;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 16px;
                  padding-right: 16px;
                  padding-top: 0;
                  position: relative;
                  text-align: center;
                  text-decoration: none;
                  user-select: none;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline-color: #ffffff;
                  outline: 1px solid transparent;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                :host(.ms-Fabric--isFocusVisible) &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline-color: #ffffff;
                  outline: 1px solid transparent;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                &:active > span {
                  left: 0px;
                  position: relative;
                  top: 0px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: WindowText;
                  border-color: WindowText;
                  color: Window;
                  forced-color-adjust: none;
                }
                &:hover {
                  background-color: #deecf9;
                  border-color: #deecf9;
                  border: 1px solid #106ebe;
                  color: #005a9e;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                  background-color: Highlight;
                  border-color: Highlight;
                  color: Window;
                }
                &:active {
                  background-color: #ffffff;
                  border-color: #ffffff;
                  border: 1px solid #005a9e;
                  color: #0078d4;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
                  -ms-high-contrast-adjust: none;
                  background-color: WindowText;
                  border-color: WindowText;
                  color: Window;
                  forced-color-adjust: none;
                }
                & .ms-Button-label {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                }
                &:focus {
                  background-color: #deecf9;
                  border: 1px solid #000000;
                  color: #005a9e;
                  outline-offset: -2px;
                  outline: 1px solid #ffffff;
                }
            data-is-focusable="true"
            type="button"
          >
            <span
              class=
                  ms-Button-flexContainer
                  {
                    align-items: center;
                    display: flex;
                    flex-wrap: nowrap;
                    height: 100%;
                    justify-content: center;
                  }
              data-automationid="splitbuttonprimary"
            >
              <span
                class=
                    ms-Button-textContainer
                    {
                      display: block;
                      flex-grow: 1;
                    }
              >
                <span
                  class=
                      ms-Button-label
                      {
                        display: block;
                        font-weight: 600;
                        line-height: 100%;
                        margin-bottom: 0;
                        margin-left: 4px;
                        margin-right: 4px;
                        margin-top: 0;
                      }
                  id="id__4"
                >
                  Test Primary Button
                </span>
              </span>
            </span>
          </button>
          <button
            class=
                ms-Button
                ms-Button--default
                ms-TeachingBubble-secondaryButton
                secondary-className
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  background-color: #0078d4;
                  border-color: #ffffff;
                  border-radius: 2px;
                  border: 1px solid #8a8886;
                  box-sizing: border-box;
                  color: #323130;
                  cursor: pointer;
                  display: inline-flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  justify-content: center;
                  min-height: 32px;
                  min-width: 80px;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 16px;
                  padding-right: 16px;
                  padding-top: 0;
                  position: relative;
                  text-align: center;
                  text-decoration: none;
                  user-select: none;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid transparent;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                :host(.ms-Fabric--isFocusVisible) &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid transparent;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                &:active > span {
                  left: 0px;
                  position: relative;
                  top: 0px;
                }
                &:hover {
                  background-color: #106ebe;
                  border-color: #ffffff;
                  color: #201f1e;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                  border-color: Highlight;
                  color: Highlight;
                }
                &:active {
                  background-color: #0078d4;
                  border-color: #ffffff;
                  color: #201f1e;
                }
                & .ms-Button-label {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  color: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                }
                &:focus {
                  background-color: #005a9e;
                  border: 1px solid #000000;
                  outline-offset: -2px;
                  outline: 1px solid #ffffff;
                }
            data-is-focusable="true"
            type="button"
          >
            <span
              class=
                  ms-Button-flexContainer
                  {
                    align-items: center;
                    display: flex;
                    flex-wrap: nowrap;
                    height: 100%;
                    justify-content: center;
                  }
              data-automationid="splitbuttonprimary"
            >
              <span
                class=
                    ms-Button-textContainer
                    {
                      display: block;
                      flex-grow: 1;
                    }
              >
                <span
                  class=
                      ms-Button-label
                      {
                        display: block;
                        font-weight: 600;
                        line-height: 100%;
                        margin-bottom: 0;
                        margin-left: 4px;
                        margin-right: 4px;
                        margin-top: 0;
                      }
                  id="id__7"
                >
                  Test Secondary Button
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <button
        class=
            ms-Button
            ms-Button--icon
            ms-TeachingBubble-closebutton
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              border-radius: 0px;
              border: none;
              box-sizing: border-box;
              color: #ffffff;
              cursor: pointer;
              display: inline-flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              height: 32px;
              justify-content: center;
              margin-bottom: 0;
              margin-left: 0;
              margin-right: 15px;
              margin-top: 15px;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 4px;
              padding-right: 4px;
              padding-top: 0;
              position: absolute;
              right: 0px;
              text-align: center;
              text-decoration: none;
              top: 0px;
              user-select: none;
              width: 32px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &:hover {
              background-color: #f3f2f1;
              background: #106ebe;
              color: #ffffff;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              background: #005a9e;
              color: #ffffff;
            }
            &:focus {
              border: 1px solid #edebe9;
            }
        data-is-focusable="true"
        type="button"
      >
        <span
          class=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                  text-decoration: inherit;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 16px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0;
                  margin-left: 4px;
                  margin-right: 4px;
                  margin-top: 0;
                  text-align: center;
                }
            data-icon-name="Cancel"
            style="font-family: \\"FabricMDL2Icons\\";"
          >
            
          </i>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with calloutProps that deal with styles 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with condensed headline correctly 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--condensed
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 600;
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="title"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with custom footer text 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
      <div
        class=
            ms-Stack
            ms-TeachingBubble-footer
            {
              align-items: center;
              box-sizing: border-box;
              color: #ffffff;
              display: flex;
              flex-direction: row;
              flex-wrap: nowrap;
              flex: auto;
              height: auto;
              justify-content: space-between;
              width: auto;
            }
            & > * {
              text-overflow: ellipsis;
            }
            & .ms-Button:not(:first-child) {
              margin-left: 10px;
            }
      >
        <div
          class=
              ms-StackItem
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                align-self: center;
                flex-basis: auto;
                flex-shrink: 1;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: auto;
                width: auto;
              }
        >
          <span>
            1 of 2
          </span>
        </div>
        <div
          class=
              ms-StackItem
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                flex-basis: auto;
                flex-shrink: 1;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: auto;
                width: auto;
              }
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with generated aria-describedby and aria-labelledby 1`] = `
<div
  aria-describedby="teaching-bubble-content-0"
  aria-labelledby="teaching-bubble-title-1"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--large
            &:not(:last-child) {
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-size: 20px;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="teaching-bubble-title-1"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="teaching-bubble-content-0"
        >
          Test Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with image correctly 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    class="ms-TeachingBubble-header ms-TeachingBubble-image"
  >
    <div
      class=
          ms-Image
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
          }
    >
      <img
        class=
            ms-Image-image
            ms-Image-image--portrait
            is-notLoaded
            is-fadeIn
            {
              display: block;
              opacity: 0;
            }
        src="test image url"
      />
    </div>
  </div>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--large
            &:not(:last-child) {
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-size: 20px;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="title"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`TeachingBubble renders TeachingBubbleContent with small headline correctly 1`] = `
<div
  aria-describedby="content"
  aria-labelledby="title"
  class=
      ms-TeachingBubble-content
      {
        animation-duration: 300ms;
        animation-fill-mode: both;
        animation-name: keyframes 0%{opacity:0;animation-timing-function:cubic-bezier(.1,.9,.2,1);transform:scale3d(.90,.90,.90);}100%{opacity:1;transform:scale3d(1,1,1);};
        animation-timing-function: linear;
        border: 0px;
        display: block;
        max-width: 364px;
        outline: transparent;
        width: calc(100% + 1px);
      }
  data-is-focusable="true"
  role="dialog"
  tabindex="-1"
>
  <div
    data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
  >
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
    <div
      class=
          ms-TeachingBubble-bodycontent
          {
            padding-bottom: 20px;
            padding-left: 24px;
            padding-right: 24px;
            padding-top: 20px;
          }
    >
      <div
        class=
            ms-TeachingBubble-header
            ms-TeachingBubble-header--small
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 600;
            }
            &:not(:last-child) {
              margin-bottom: 14px;
            }
      >
        <p
          aria-level="3"
          class=
              ms-TeachingBubble-headline
              {
                color: #ffffff;
                font-weight: 600;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                overflow-wrap: break-word;
              }
          id="title"
          role="heading"
        >
          Test Title
        </p>
      </div>
      <div
        class=
            ms-TeachingBubble-body
            &:not(:last-child) {
              margin-bottom: 20px;
            }
      >
        <p
          class=
              ms-TeachingBubble-subText
              {
                color: #ffffff;
                font-size: 14px;
                font-weight: 400;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
              }
          id="content"
        >
          Content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-is-focus-trap-zone-bumper="true"
      data-is-visible="true"
      style="pointer-events: none; position: fixed;"
      tabindex="0"
    />
  </div>
</div>
`;
